--- a/NanaManager/Pages/AudioViewer.xaml
+++ b/NanaManager/Pages/AudioViewer.xaml
@@ -7,8 +7,135 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="AudioViewer">
+	<Page.Resources>
+		<Storyboard x:Key="spinBuffer">
+			<DoubleAnimation Storyboard.TargetName="elpBuffering" Storyboard.TargetProperty="(Ellipse.RenderTransform).(RotateTransform.Angle)" By="360" Duration="0:0:2" RepeatBehavior="Forever">
+				<DoubleAnimation.EasingFunction>
+					<ExponentialEase EasingMode="EaseInOut" Exponent="6"/>
+				</DoubleAnimation.EasingFunction>
+			</DoubleAnimation>
+		</Storyboard>
+		<Storyboard x:Key="growVol">
+			<DoubleAnimation Storyboard.TargetName="grdVol" Storyboard.TargetProperty="(Grid.Width)" To="100" Duration="0:0:0.1">
+				<DoubleAnimation.EasingFunction>
+					<QuadraticEase EasingMode="EaseOut"/>
+				</DoubleAnimation.EasingFunction>
+			</DoubleAnimation>
+		</Storyboard>
+		<Storyboard x:Key="shrinkVol">
+			<DoubleAnimation Storyboard.TargetName="grdVol" Storyboard.TargetProperty="(Grid.Width)" To="0" Duration="0:0:0.1">
+				<DoubleAnimation.EasingFunction>
+					<QuadraticEase EasingMode="EaseIn"/>
+				</DoubleAnimation.EasingFunction>
+			</DoubleAnimation>
+		</Storyboard>
+	</Page.Resources>
 	<Grid>
-		<Border Background="{DynamicResource BlackGlass}">
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition Width="50"/>
+			<ColumnDefinition Width="50"/>
+			<ColumnDefinition Width="50"/>
+			<ColumnDefinition/>
+			<ColumnDefinition Width="50"/>
+			<ColumnDefinition Width="50"/>
+			<ColumnDefinition Width="50"/>
+		</Grid.ColumnDefinitions>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="7*"/>
+			<RowDefinition Height="45"/>
+			<RowDefinition Height="2*"/>
+		</Grid.RowDefinitions>
+		<Slider x:Name="sldSeek" Grid.Column="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" VerticalContentAlignment="Center" Grid.Row="1" ValueChanged="sldSeek_ValueChanged"/>
+		<Label x:Name="lblTime" Grid.Column="3" Margin="0,21,0,0" Grid.Row="1" HorizontalAlignment="Left" Content="00:00" Foreground="{DynamicResource LightText}"/>
+		<Label x:Name="lblmaxTime" Grid.Column="3" Margin="0,21,0,0" Grid.Row="1" HorizontalAlignment="Right" Content="00:00" Foreground="{DynamicResource LightText}"/>
+		<ToggleButton x:Name="btnPlay" Grid.Column="2" Grid.Row="1" IsChecked="True" Checked="btnPlay_Checked" Unchecked="btnPlay_Unchecked" Margin="5" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Height="Auto">
+			<ToggleButton.Style>
+				<Style TargetType="ToggleButton">
+					<Setter Property="Background" Value="{DynamicResource PrimaryIdle}"/>
+					<Setter Property="Foreground" Value="{DynamicResource CheckGlyphColor}"/>
+					<Setter Property="FontFamily" Value="Segoe UI Semibold"/>
+					<Setter Property="HorizontalContentAlignment" Value="Center"/>
+					<Setter Property="VerticalContentAlignment" Value="Center"/>
+					<Setter Property="Margin" Value="5,5,5,0"/>
+					<Setter Property="Height" Value="25"/>
+					<Setter Property="Template">
+						<Setter.Value>
+							<ControlTemplate TargetType="{x:Type ToggleButton}">
+								<Border Background="{TemplateBinding Background}" BorderBrush="{x:Null}" CornerRadius="8" >
+									<ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+								</Border>
+							</ControlTemplate>
+						</Setter.Value>
+					</Setter>
+					<Setter Property="Content">
+						<Setter.Value>
+							<Path Fill="{TemplateBinding Foreground}" HorizontalAlignment="Center" VerticalAlignment="Center">
+								<Path.Data>
+									<PathGeometry>
+										<PathFigure StartPoint="8,5">
+											<LineSegment Point="0,0"/>
+											<LineSegment Point="0,10"/>
+										</PathFigure>
+									</PathGeometry>
+								</Path.Data>
+							</Path>
+						</Setter.Value>
+					</Setter>
+					<Style.Triggers>
+						<Trigger Property="IsMouseOver" Value="True">
+							<Setter Property="Background" Value="{DynamicResource PrimaryHighlight}"/>
+						</Trigger>
+						<Trigger Property="IsPressed" Value="True">
+							<Setter Property="Background" Value="{DynamicResource PrimaryPressed}"/>
+						</Trigger>
+						<Trigger Property="IsEnabled" Value="False">
+							<Setter Property="Foreground" Value="{DynamicResource DisabledText}"/>
+							<Setter Property="Background" Value="{DynamicResource PrimaryDisabled}"/>
+						</Trigger>
+						<Trigger Property="IsChecked" Value="False">
+							<Setter Property="Content">
+								<Setter.Value>
+									<Grid Width="20" Height="20">
+										<Grid.ColumnDefinitions>
+											<ColumnDefinition/>
+											<ColumnDefinition/>
+										</Grid.ColumnDefinitions>
+										<Rectangle HorizontalAlignment="Right" VerticalAlignment="Stretch" Fill="{TemplateBinding Foreground}" Width="5" Height="15" Margin="0,1,3,0"/>
+										<Rectangle HorizontalAlignment="Left" VerticalAlignment="Stretch" Fill="{TemplateBinding Foreground}" Width="5" Height="15" Grid.Column="1" Margin="3,1,0,0"/>
+									</Grid>
+								</Setter.Value>
+							</Setter>
+						</Trigger>
+					</Style.Triggers>
+				</Style>
+			</ToggleButton.Style>
+		</ToggleButton>
+		<Ellipse x:Name="elpBuffering" Visibility="Collapsed" Grid.Column="3" HorizontalAlignment="Center" Height="125" VerticalAlignment="Center" Width="125" StrokeThickness="10" RenderTransformOrigin="0.5,0.5">
+			<Ellipse.Stroke>
+				<LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
+					<GradientStop Color="#00AE006B" Offset="0.213"/>
+					<GradientStop Color="#FFAE006B"/>
+				</LinearGradientBrush>
+			</Ellipse.Stroke>
+			<Ellipse.RenderTransform>
+				<RotateTransform/>
+			</Ellipse.RenderTransform>
+		</Ellipse>
+		<ToggleButton Style="{DynamicResource Rounded Button}" x:Name="btnVolume" Grid.Column="4" Grid.Row="1" IsChecked="True" Checked="btnPlay_Checked" Unchecked="btnPlay_Unchecked" Margin="5" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Height="Auto">
+			<ToggleButton.Content>
+				<Grid Width="20" Height="20">
+					<Path Stroke="{DynamicResource CheckGlyphColor}" Data="M 0,7 l 5,0 l 5,-5 l 0,15 l -5,-5 l -5,0 Z" StrokeThickness="2"/>
+					<Path x:Name="pthVol1" Stroke="{DynamicResource CheckGlyphColor}" StrokeThickness="2" Data="M 13,1 Q 16,9 13,18"/>
+					<Path x:Name="pthVol2" Stroke="{DynamicResource CheckGlyphColor}" StrokeThickness="2" Data="M 17,1 Q 20,9 17,18"/>
+					<Path x:Name="pthMute" Stroke="{DynamicResource CheckGlyphColor}" StrokeThickness="2" Data="M 20,0 0,20" Visibility="Collapsed"/>
+				</Grid>
+			</ToggleButton.Content>
+		</ToggleButton>
+		<Grid x:Name="grdVol" Grid.Column="4" Grid.Row="1" Width="0" Margin="45,0,0,0">
+			<Slider Grid.Column="4" Value="0.5" Maximum="1" HorizontalAlignment="Left" Height="68" VerticalAlignment="Top" Width="22" Grid.RowSpan="2" Grid.Row="1" Grid.ColumnSpan="3"/>
+			<Label x:Name="lblVol" HorizontalAlignment="Left" VerticalAlignment="Bottom" Content="50%" Foreground="{DynamicResource LightText}"/>
+		</Grid>
+		<Border x:Name="bdrLoading" Background="{DynamicResource BlackGlass}" Visibility="Collapsed" Grid.RowSpan="3" Grid.ColumnSpan="5">
 			<Viewbox>
 				<Label Content="Loading" Foreground="{DynamicResource LightText}" Margin="20"/>
 			</Viewbox>
