--- a/NanaManager/App.xaml
+++ b/NanaManager/App.xaml
@@ -858,21 +858,21 @@
 									<VisualState x:Name="Normal" />
 									<VisualState x:Name="MouseOver">
 										<Storyboard>
-											<ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(Shape.Fill)" Storyboard.TargetName="Ellipse">
+											<ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(Shape.Fill).(SolidColorBrush.Color)" Storyboard.TargetName="Ellipse">
 												<EasingColorKeyFrame KeyTime="0" Value="{DynamicResource PrimaryHighlightColor}" />
 											</ColorAnimationUsingKeyFrames>
 										</Storyboard>
 									</VisualState>
 									<VisualState x:Name="Pressed">
 										<Storyboard>
-											<ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(Shape.Fill)" Storyboard.TargetName="Ellipse">
+											<ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(Shape.Fill).(SolidColorBrush.Color)" Storyboard.TargetName="Ellipse">
 												<EasingColorKeyFrame KeyTime="0" Value="{DynamicResource PrimaryPressedColor}" />
 											</ColorAnimationUsingKeyFrames>
 										</Storyboard>
 									</VisualState>
 									<VisualState x:Name="Disabled">
 										<Storyboard>
-											<ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(Shape.Fill)" Storyboard.TargetName="Ellipse">
+											<ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(Shape.Fill).(SolidColorBrush.Color)" Storyboard.TargetName="Ellipse">
 												<EasingColorKeyFrame KeyTime="0" Value="{DynamicResource PrimaryDisabledColor}" />
 											</ColorAnimationUsingKeyFrames>
 										</Storyboard>
@@ -899,7 +899,7 @@
 						<RepeatButton Style="{StaticResource SliderButtonStyle}" Command="Slider.DecreaseLarge" />
 					</Track.DecreaseRepeatButton>
 					<Track.Thumb>
-						<Thumb Style="{StaticResource SliderThumbStyle}" />
+						<Thumb Style="{StaticResource SliderThumbStyle}"/>
 					</Track.Thumb>
 					<Track.IncreaseRepeatButton>
 						<RepeatButton Style="{StaticResource SliderButtonStyle}" Command="Slider.IncreaseLarge" />
