--- a/NanaManager/Pages/Login.xaml
+++ b/NanaManager/Pages/Login.xaml
@@ -14,8 +14,8 @@
         <Label Content="Username" HorizontalAlignment="Center" Margin="0,0,260,50" VerticalAlignment="Center" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Foreground="White" FontSize="18"/>
         <Label Content="Password" HorizontalAlignment="Center" Margin="0,50,255,0" VerticalAlignment="Center" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Foreground="White" FontSize="18"/>
         <Button Content="Change Login" Style="{DynamicResource Primary Button}" HorizontalAlignment="Left" Height="39" Margin="10,376,596,10" VerticalAlignment="Bottom" Width="194" FontSize="18" Click="button_Click"/>
-        <Label Content="Nana Manager" HorizontalAlignment="Center" Height="94" Margin="0,0,0,300" VerticalAlignment="Center" Width="403" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Foreground="White" FontSize="50" FontFamily="MV Boli"/>
-        <Border BorderBrush="#FF6C0243" BorderThickness="0,0,0,2" HorizontalAlignment="Center" Height="32" Margin="483,172,285,221" VerticalAlignment="Center" Width="32">
+		<Image HorizontalAlignment="Center" Height="164" Margin="0,3,0,258" VerticalAlignment="Center" Width="350" Source="../Resources/Nana Manager Logo.png" Stretch="UniformToFill"/>
+		<Border BorderBrush="#FF6C0243" BorderThickness="0,0,0,2" HorizontalAlignment="Center" Height="32" Margin="483,172,285,221" VerticalAlignment="Center" Width="32">
             <Border.Background>
                 <ImageBrush ImageSource="pack://siteoforigin:,,,/Resources/Username.png"/>
             </Border.Background>
@@ -28,6 +28,6 @@
 				<ImageBrush ImageSource="pack://siteoforigin:,,,/Resources/PasswordShow.png"/>
             </Border.Background>
         </Border>
-        <Label x:Name="lblBadInput" Content="Your username or password were incorrect" HorizontalAlignment="Center" Height="32" Margin="269,114,245,279" VerticalAlignment="Center" Width="286" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Foreground="#FFFF3C3C" FontSize="14"/>
+        <Label x:Name="lblBadInput" Content="Your username or password was incorrect" HorizontalAlignment="Center" Height="32" Margin="0,312,0,81" VerticalAlignment="Center" Width="286" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Foreground="#FFFF3C3C" FontSize="14"/>
     </Grid>
 </Page>
