--- a/NanaManager/Pages/Viewer.xaml
+++ b/NanaManager/Pages/Viewer.xaml
@@ -74,8 +74,8 @@
 				</ItemsPanelTemplate>
 			</ListView.ItemsPanel>
 		</ListView>
-		<Ellipse x:Name="elpMenuButton" Fill="{DynamicResource MenuButtonIdle}" HorizontalAlignment="Center" Margin="371,2" Grid.Row="1" Stroke="Black" MouseDown="image_MouseDown" MouseEnter="image_MouseEnter" MouseUp="image_MouseUp" MouseLeave="image_MouseLeave" Width="{Binding ActualHeight, RelativeSource={RelativeSource Self}}" Cursor="Hand"/>
-		<Image Margin="382,11" Grid.Row="1" Source="pack://siteoforigin:,,,/Resources/MenuBars.png" Grid.RowSpan="1" Cursor="Hand" MouseDown="image_MouseDown" MouseEnter="image_MouseEnter" MouseUp="image_MouseUp" MouseLeave="image_MouseLeave"/>
+		<Ellipse x:Name="elpMenuButton" Fill="{DynamicResource MenuButtonIdle}" HorizontalAlignment="Center" Margin="371,7" Grid.Row="1" Stroke="Transparent" MouseDown="image_MouseDown" MouseEnter="image_MouseEnter" MouseUp="image_MouseUp" MouseLeave="image_MouseLeave" Width="{Binding ActualHeight, RelativeSource={RelativeSource Self}}" Cursor="Hand"/>
+		<Image Margin="382,15" Grid.Row="1" Source="pack://siteoforigin:,,,/Resources/MenuBars.png" Grid.RowSpan="1" Cursor="Hand" MouseDown="image_MouseDown" MouseEnter="image_MouseEnter" MouseUp="image_MouseUp" MouseLeave="image_MouseLeave"/>
 		<Button x:Name="btnExport" Style="{DynamicResource Menu Button}" IsEnabled="False" Content="Export" FontSize="14" Height="Auto" Margin="0,10,10,10" Grid.Row="1" HorizontalAlignment="Right" Width="96" Click="btnExport_Click"/>
 		<Button x:Name="btnEdit" Style="{DynamicResource Menu Button}" IsEnabled="False" Content="Edit" FontSize="14" Height="Auto" Margin="0,10,111,10" Grid.Row="1" HorizontalAlignment="Right" Width="96" Click="btnEdit_Click"/>
 		<Button x:Name="btnSettings" Style="{DynamicResource Menu Button}" FontSize="14" Height="Auto" Margin="10,10,0,10" Grid.Row="1" HorizontalAlignment="Left" Width="96" Click="btnSettings_Click">
