--- a/NanaManager/MainWindow.xaml
+++ b/NanaManager/MainWindow.xaml
@@ -52,7 +52,7 @@
 						</Style>
 					</Rectangle.Style>
 				</Rectangle>
-				<Image Grid.Column="0" Width="22" Height="22" Margin="4,0,4,0" />
+				<Image x:Name="imgIcon" Grid.Column="0" HorizontalAlignment="Center" Source="pack://siteoforigin:,,,/Resources/Nana Manager Icon Small.png" Stretch="UniformToFill"/>
 				<TextBlock Grid.Column="1" Margin="4 0 0 0" VerticalAlignment="Center" FontSize="14" Text="{Binding ElementName=wndMain, Path=Title}" Foreground="{DynamicResource LightText}">
 					<TextBlock.Style>
 						<Style TargetType="TextBlock">
@@ -77,7 +77,7 @@
 					<Path Width="46" Height="25" Data="M 18,8 27,17 M 18,17 27,8" Stroke="{Binding Path=Foreground, RelativeSource={RelativeSource AncestorType={x:Type Button}}}" StrokeThickness="1" />
 				</Button>
 			</Grid>
-			
+
 			<!--#endregion-->
 			<Border Visibility="Collapsed" x:Name="bdrNotif" Grid.Row="1" Height="40" Background="{DynamicResource BlackGlass}" CornerRadius="0,10,10,10" MaxWidth="300" HorizontalAlignment="Left" VerticalAlignment="Top" MouseEnter="bdrNotif_MouseEnter" MouseLeave="bdrNotif_MouseLeave">
 				<Label x:Name="lblNotif" FontSize="18" Content="Sorting by Tag" Foreground="{DynamicResource LightText}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
@@ -88,5 +88,5 @@
 				</ScrollViewer>
 			</Border>
 		</Grid>
-    </Border>
+	</Border>
 </Window>
