--- a/NanaManager/Pages/Viewer.xaml
+++ b/NanaManager/Pages/Viewer.xaml
@@ -75,7 +75,17 @@
 			</ListView.ItemsPanel>
 		</ListView>
 		<Ellipse x:Name="elpMenuButton" Fill="{DynamicResource MenuButtonIdle}" HorizontalAlignment="Center" Margin="371,7" Grid.Row="1" Stroke="Transparent" MouseDown="image_MouseDown" MouseEnter="image_MouseEnter" MouseUp="image_MouseUp" MouseLeave="image_MouseLeave" Width="{Binding ActualHeight, RelativeSource={RelativeSource Self}}" Cursor="Hand"/>
-		<Image Margin="382,15" Grid.Row="1" Source="pack://siteoforigin:,,,/Resources/MenuBars.png" Grid.RowSpan="1" Cursor="Hand" MouseDown="image_MouseDown" MouseEnter="image_MouseEnter" MouseUp="image_MouseUp" MouseLeave="image_MouseLeave"/>
+		<Grid Grid.Row="1" Margin="371,15"  Width="{Binding ActualHeight, RelativeSource={RelativeSource Self}}" IsHitTestVisible="True">
+			<Grid.RowDefinitions>
+				<RowDefinition/>
+				<RowDefinition/>
+				<RowDefinition/>
+			</Grid.RowDefinitions>
+			<Rectangle RadiusX="2" RadiusY="2" Fill="{DynamicResource Highlight}" Margin="0,3,0,2" IsHitTestVisible="False"/>
+			<Rectangle Grid.Row="1" RadiusX="2" RadiusY="2" Fill="{DynamicResource Highlight}" Margin="0,2" IsHitTestVisible="False"/>
+			<Rectangle Grid.Row="2" RadiusX="2" RadiusY="2" Fill="{DynamicResource Highlight}" Margin="0,2" IsHitTestVisible="False"/>
+		</Grid>
+		<!--Image Margin="382,15" Grid.Row="1" Source="pack://siteoforigin:,,,/Resources/MenuBars.png" Grid.RowSpan="1" Cursor="Hand" MouseDown="image_MouseDown" MouseEnter="image_MouseEnter" MouseUp="image_MouseUp" MouseLeave="image_MouseLeave"/-->
 		<Button x:Name="btnExport" Style="{DynamicResource Menu Button}" IsEnabled="False" Content="Export" FontSize="14" Height="Auto" Margin="0,10,10,10" Grid.Row="1" HorizontalAlignment="Right" Width="96" Click="btnExport_Click"/>
 		<Button x:Name="btnEdit" Style="{DynamicResource Menu Button}" IsEnabled="False" Content="Edit" FontSize="14" Height="Auto" Margin="0,10,111,10" Grid.Row="1" HorizontalAlignment="Right" Width="96" Click="btnEdit_Click"/>
 		<Button x:Name="btnSettings" Style="{DynamicResource Menu Button}" FontSize="14" Height="Auto" Margin="10,10,0,10" Grid.Row="1" HorizontalAlignment="Left" Width="96" Click="btnSettings_Click">
